Fix compilation issues.